# mistral.rs

./: Cargo.toml  config.toml  gpt-20b.toml  spark
mistralrs/: Cargo.toml
mistralrs-cli/src/ui/handlers/: websocket.rs
mistralrs-cli/static/: styles.css
mistralrs-cli/static/js/: utils.js
mistralrs-core/src/pipeline/: chat_template.rs
mistralrs-core/src/utils/: debug.rs
mistralrs-server-core/src/: chat_completion.rs
mistralrs/examples/models/text_models/: main.rs
mistralrs/src/: model.rs
test_toml/: Cargo.toml
test_toml/src/: main.rs
